--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.testcontainers:postgresql:1.13.0'
     compileOnly 'org.graalvm.nativeimage:svm:19.3.1'
+    compile group: 'net.snowflake', name: 'snowflake-jdbc', version: '3.12.4'
 }
 
 group = 'com.hashedin'
